SDIT-1140: 🔒️ Suppress latest netty vulnerability. (#53)